--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
+    "lottie": "^0.0.1",
+    "lucide-react": "^0.417.0",
+    "next": "14.2.5",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-lottie": "^1.2.4",
+    "react-palette": "^1.0.2",
+    "tmp": "^0.2.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lottie": "^1.2.10",
+    "@types/uuid": "^10.0.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
